<resources>
    <string name="app_name">DrawingApp2</string>
    <string name="action_settings">Settings</string>

    <string name="start_new">New</string>
    <string name="pencil">Pencil</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="type">Type</string>


    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

</resources>
